# flox

./: .gitignore  Cargo.toml  index.ts  package-lock.json  package.json  tsconfig.json
.github/workflows/: version.yml
bindings/: FlockParams.ts  JsAgent.ts
demo/: draw.ts  index.html  index.ts  package-lock.json  package.json  style.scss  webpack.config.js
demo/lib/: agent.ts  flock.ts  run.ts  v3.ts
interop/: Cargo.toml
interop/src/: interop.rs  lib.rs
render/: Cargo.toml
render/src/: main.rs
sim/: Cargo.toml
sim/bindings/: FlockParams.ts  JsFlock.ts  V3.ts
sim/src/: lib.rs
sim/src/flock/types/: agent.rs  flock.rs
src/: bee.ts  bees.ts  index.ts  lib.rs  main.rs  types.ts
src/demo/: draw.ts  index.html  index.ts  style.scss
src/flock/: forces.ts  neighbors.ts
src/flock/sim/: forces.ts  init.ts  neighbors.ts  tick.ts
src/flock/types/: agent.rs  agent.ts  agent_spec.rs  agent_test.rs  bee.ts  flock.rs  flock.ts  flock_spec.rs  interop.rs
src/lib/: index.ts  measure-time.ts  smartMap.ts  v3.ts
src/render/: draw.ts  setup.ts  update.ts
