[package]
name = "flox"
version = "0.1.0"
authors = ["Trevor Sargent <trevor.a.sargent@gmail.com>"]
edition = "2018"

[dependencies]
console_error_panic_hook = { version = "0.1.6", optional = true }
vex = "2.1.1"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
ts-rs = "6.1"
once_cell = "1.10.0"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }



[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.scripts]
gen-types = "cargo test"
serve = 'cargo watch -w src  -s "cargo test && wasm-pack build"'