[package]
name = "interop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
console_error_panic_hook = { version = "0.1.6", optional = true }
once_cell = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
sim = {path = "../sim"}
ts-rs = "6.1"


[lib]
crate-type = ["cdylib", "rlib"]
