[package]
name = "sim"
version = "0.1.0"
authors = ["Trevor Sargent <trevor.a.sargent@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
vex = "2.1.1"
ts-rs = "6.1"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }

[lib]
crate-type = ["cdylib", "rlib"]
